--- a/fe/src/components/MesoPopup.css
+++ b/fe/src/components/MesoPopup.css
@@ -4,22 +4,34 @@
     left: 0;
     height: 100vh;
     width: 100%;
-    background-color: rgba(red, green, blue, alpha);
     display: flex;
     justify-content: center;
     align-items: center;
+
 }
 
 .insidepop{
+    top: 0;
     position: relative;
-    padding: 32px;
     width: 100%;
-    max-width: 640px;
-    background-color: white;
+    max-width: 400px;
+    height: 100%;
+    max-height: 600px;
+    background-color: black;
+    display: flex;
+    flex-direction: column; /* Ensures header is at the top */
+
+
 }
 
-.insidepop.close .close-btn{
-    position: absolute;
-    top: 16px;
-    right: 16px;
+.header{
+    color: red;
+    font-size: 24px;
+    text-align: center;
+}
+
+.form{
+    color: red;
+    font-size: 24px;
+    text-align: center;
 }
