--- a/fe/src/components/MesoPopup.css
+++ b/fe/src/components/MesoPopup.css
@@ -23,6 +23,15 @@
 
 
 }
+.submitbuttons{
+
+    display: flex;
+    justify-content: center;
+    flex-direction: column;  
+    align-items: center;
+    gap: 10px;   
+    margin-top: 10px;   
+}
 
 .header{
     color: red;
@@ -34,4 +43,13 @@
     color: red;
     font-size: 24px;
     text-align: center;
+}
+
+.inputs{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;  
+    align-items: center;
+    gap: 10px;   
+    margin-top: 10px;   
 }
